--- a/css/main.css
+++ b/css/main.css
@@ -131,11 +131,8 @@ p {
   text-transform: uppercase;
   margin: 30px 0 14px 0;
 }
-.aboutus-block__senumr {
-  font-size: 50px;
-  line-height: 75px;
-  text-transform: uppercase;
-  margin: 30px 0 14px 0;
+.aboutus-block__statelemr {
+  width: 170px;
 }
 .aboutus-block__img {
   margin-bottom: 64px;
@@ -170,19 +167,16 @@ p {
     padding-bottom: 36px;
   }
   .aboutus-block__statelem {
-    width: 170px;
+    margin-right: 33px;
+  }
+  .aboutus-block__statelemr {
+    margin-right: 0;
   }
   .aboutus-block__senum {
-    margin-right: 33px;
+    width: 170px;
   }
   .aboutus-block__setxt {
-    margin-right: 33px;
-  }
-  .aboutus-block__senumr {
-    margin-right: 0;
-  }
-  .aboutus-block__setxtr {
-    margin-right: 0;
+    width: 170px;
   }
   .aboutus-block__img {
     margin: 0 32px 100px;
@@ -217,7 +211,6 @@ p {
     padding-bottom: 34px;
   }
   .aboutus-block__statelem {
-    width: 170px;
     margin-right: 23px;
   }
   .aboutus-block__senum {
@@ -227,11 +220,7 @@ p {
   .aboutus-block__setxt {
     width: 170px;
   }
-  .aboutus-block__senumr {
-    text-transform: uppercase;
-    margin: 30px 28px 0 28px;
-  }
-  .aboutus-block__setxtr {
+  .aboutus-block__statelemr {
     margin-right: 0;
   }
   .aboutus-block__img {
